cot output fixed

--- a/server_v2/index.html
+++ b/server_v2/index.html
@@ -422,7 +422,7 @@ footer{text-align:center;padding:32px 24px;border-top:1px solid var(--border);fo
   </div>
 
 </div>
-
+<!-- todo: add link to umfrage here  -->
 <footer>Built with Llama 3.1 · Unsloth · SHAP · FastAPI &nbsp;|&nbsp; LLM Explainability Explorer</footer>
 
 <script>
